# MODERN_CPP_ENGINE

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Config.hpp  Types.hpp
src/ecs/: ComponentStorage.hpp  Entity.hpp  SparseSet.hpp  System.hpp  World.cpp  World.hpp
src/memory/: MemoryPool.cpp  MemoryPool.hpp  ObjectPool.hpp  PoolResource.cpp  PoolResource.hpp
src/utils/: Debug.hpp  Timer.cpp  Timer.hpp
tests/: CMakeLists.txt  ECSTests.cpp  MemoryPoolTests.cpp
